Fix unit testcases