@@ -84,6 +84,7 @@ android {
             jvmArgs += ['--add-opens', 'java.base/java.text=ALL-UNNAMED']
             jvmArgs += ['--add-opens', 'java.base/java.math=ALL-UNNAMED']
             jvmArgs += ['--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
+            jvmArgs += ['--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED']
             jvmArgs += ['--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED']
         }
         if (useOrchestrator()) {
